# icat

./: icat.cabal
app/: Main.hs
src/: ColorTable.hs  ICat.hs
